demo/resilience/istio/preference-service-retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: preference
  namespace: tutorial
spec:
  hosts:
  - preference
  http:
  - route:
    - destination:
        host: preference
    retries:
      attempts: 3
      perTryTimeout: 1s
