demo/resilience/istio/recommendation-destinationrule-cb.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation
  namespace: tutorial
spec:
  host: recommendation
  trafficPolicy:
    outlierDetection:
      http:
        consecutiveErrors: 1
        baseEjectionTime: 5s
        interval: 5s
        maxEjectionPercent: 100
  subsets:
  - name: version-v1
    labels:
      version: v1
  - name: version-v2
    labels:
      version: v2
